Fixed an issue with the buttons being white and invisible

--- a/css/style.css
+++ b/css/style.css
@@ -1551,10 +1551,6 @@ body.mobile-nav-active #mobile-nav-toggle {
   color: white;
 }
 
-.btn-f-red>a {
-  color: white;
-}
-
 /*--------------------------------------------------------------
 # Footer
 --------------------------------------------------------------*/
